--- a/app/modules/manager/views/scripts/counseling-structure/index.phtml
+++ b/app/modules/manager/views/scripts/counseling-structure/index.phtml
@@ -1,3 +1,4 @@
+
 <?php
 $jScript = <<<JS
 require(["dojo/behavior", "core/Sandbox", "core/sandbox/layout/Dialog"]);
@@ -5,8 +6,45 @@ dojo.ready(function(){
 
 });
 JS;
-$this->headScript()->appendScript($jScript, $type = 'text/javascript')
+$this->headScript()->appendScript($jScript, $type = 'text/javascript');
 ?>
+
 <?php
 $data = $this->data;
+$companyColl = new HM_Model_Billing_Company_Collection();
+$lineColl = new HM_Model_Counseling_Structure_Line_Collection();
 ?>
+<table class="table table-bordered">
+    <colgroup>
+        <col width="350"/>
+        <col width="30"/>
+        <col/>
+    </colgroup>
+    <thead>
+        <tr>
+            <th colspan="3">Название компании</th>
+        </tr>
+    </thead>
+    <tbody>
+        <?php
+            foreach($data as $entry):
+                $companyData = $companyColl->load($entry['company'])->getData();
+        ?>
+        <tr>
+            <td rowspan="<?=count($entry['lines']) + 1?>"><?=$companyData->get('name')?></td>
+            <th>#ID</th>
+            <th>Линия Консультации</th>
+        </tr>
+        <?php
+            foreach($entry['lines'] as $line):
+                $lineData = $lineColl->load($line)->getData();
+        ?>
+        <tr>
+            <td><?=$lineData->get('id')?></td>
+            <td><a href="<?=$this->baseUrl('manager/counseling-structure/line/id/' . $lineData->get('id'))?>" title="<?=$lineData->get('name')?>"><?=$lineData->get('name')?></a></td>
+        </tr>
+        <?php endforeach; ?>
+        <?php endforeach; ?>
+    </tbody>
+</table>
+
