--- a/app/modules/manager/views/scripts/counseling-structure/line.phtml
+++ b/app/modules/manager/views/scripts/counseling-structure/line.phtml
@@ -2,9 +2,33 @@
 $jScript = <<<JS
 require(["dojo/behavior", "core/Sandbox", "core/sandbox/layout/Dialog"]);
 dojo.ready(function(){
+    Sandbox = new core.Sandbox();
 
+    dojo.behavior.add({
+        '#testme': {
+            onclick: function(){
+                Sandbox.Layout.contentLoader('manager/counseling-structure/edit-line', {id: 10}).addCallback(function(results){
+                    dojo.byId('content').innerHTML = results;
+                });
+            }
+        },
+        '#testme2': {
+            onclick: function(){
+                Sandbox.Layout.contentLoader('manager/counseling-structure/get-levels', {id: 11}).addCallback(function(results){
+                    dojo.byId('content').innerHTML = results;
+                });
+            }
+        }
+    });
+    dojo.behavior.apply();
 });
 JS;
 $this->headScript()->appendScript($jScript, $type = 'text/javascript');
 ?>
-
+<div style="margin: 15px 0">
+    <button type="button" id="testme">Общее</button>
+    <button type="button" id="testme2">Уровни</button>
+    <button type="button">Связи уровней</button>
+    <button type="button">Тарифы</button>
+</div>
+<div id="content">1</div>
