--- a/app/layouts/core/default.phtml
+++ b/app/layouts/core/default.phtml
@@ -52,6 +52,7 @@
                     <ul class="nav">
                         <li><a>Договора</a></li>
                         <li><a href="<?=$this->baseUrl('manager/counseling-structure/index')?>">Линии Консультации</a></li>
+                        <li><a href="<?=$this->baseUrl('manager/tariffication/index')?>">Тарифы</a></li>
                         <li><a>Группы/Специалисты</a></li>
                         <li><a>Настройка доступа</a></li>
                     </ul>
