--- a/app/modules/manager/views/scripts/counseling-structure/edit-line.ajax.phtml
+++ b/app/modules/manager/views/scripts/counseling-structure/edit-line.ajax.phtml
@@ -14,3 +14,25 @@ $data = $this->data;
     <textarea id="edit-line-description" name="line[description]"><?=$data->get('description')?></textarea><br/>
     <button type="button">Сохранить</button>
 </form>
+
+<!--<table class="table table-bordered">
+    <tbody>
+        <tr>
+            <td>
+                <?php /*if(is_string($data->get('logo'))) :*/?>
+                <img width="60" height="78" style="width: 60px; height: 78px" src="data:image/png;base64,<?/*=$data->get('logo')*/?>">
+                <?php /*else: */?>
+                <img width="60" height="78" style="width: 60px; height: 78px; border: 2px solid #999" src="<?/*=$this->baseUrl('theme/default/images/not_image.png')*/?>">
+                <?php /*endif; */?>
+            </td>
+            <td>
+                <?/*=$data->get('name')*/?>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2">
+                <?/*=$data->get('description')*/?>
+            </td>
+        </tr>
+    </tbody>
+</table>-->
