--- a/app/modules/manager/views/scripts/counseling-structure/index.phtml
+++ b/app/modules/manager/views/scripts/counseling-structure/index.phtml
@@ -18,11 +18,12 @@ $lineColl = new HM_Model_Counseling_Structure_Line_Collection();
     <colgroup>
         <col width="350"/>
         <col width="30"/>
+        <col width="50%"/>
         <col/>
     </colgroup>
     <thead>
         <tr>
-            <th colspan="3">Название компании</th>
+            <th colspan="4">Название компании</th>
         </tr>
     </thead>
     <tbody>
@@ -34,6 +35,7 @@ $lineColl = new HM_Model_Counseling_Structure_Line_Collection();
             <td rowspan="<?=count($entry['lines']) + 1?>"><?=$companyData->get('name')?></td>
             <th>#ID</th>
             <th>Линия Консультации</th>
+            <th>Опции</th>
         </tr>
         <?php
             foreach($entry['lines'] as $line):
@@ -42,6 +44,7 @@ $lineColl = new HM_Model_Counseling_Structure_Line_Collection();
         <tr>
             <td><?=$lineData->get('id')?></td>
             <td><a href="<?=$this->baseUrl('manager/counseling-structure/line/id/' . $lineData->get('id'))?>" title="<?=$lineData->get('name')?>"><?=$lineData->get('name')?></a></td>
+            <td><em>просмотр/редактирование</em></td>
         </tr>
         <?php endforeach; ?>
         <?php endforeach; ?>
