--- a/app/layouts/core/default.phtml
+++ b/app/layouts/core/default.phtml
@@ -40,9 +40,47 @@
                     <img src="<?php echo $this->baseUrl('theme/default/images/logo.jpg')?>"/>
                 </a>
             </h1>
+            <div style="position: absolute; right: 0; top: 0">
+                <!-- Account Bar -->
+                <?php if(HM_Model_Account_Auth::getInstance()->isAuth()) :?>
+                <?php
+                $accountIdentity = HM_Model_Account_Auth::getInstance()->getAccount();
+                $userColl = new HM_Model_Account_User_Collection();
+                $user = $userColl->load($accountIdentity['user']);
+                ?>
+                <table>
+                    <tr>
+                        <td>
+                            <?php if(is_string($user->getData('logo'))) :?>
+                            <img width="60" height="78" style="width: 60px; height: 78px" src="data:image/png;base64,<?=$user->getData('logo')?>">
+                            <?php else: ?>
+                            <img width="60" height="78" style="width: 60px; height: 78px; border: 2px solid #999" src="<?=$this->baseUrl('theme/default/images/not_image.png')?>">
+                            <?php endif; ?>
+                        </td>
+                        <td>
+                            <div>
+                                <strong><?php echo $user->getData('email'); ?> / <?php echo $user->getData('login'); ?></strong> (id: <?php echo $user->getData('id'); ?>)<br/>
+                                <a href="<?php echo $this->baseUrl('account/access/logout');?>">Выход</a>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+                <?php else: ?>
+                <table>
+                    <tr>
+                        <td>
+                            <a href="<?php echo $this->baseUrl('account/access/login');?>">Авторизация</a>
+                        </td>
+                    </tr>
+                </table>
+                <?php endif; ?>
+                <!-- Account Bar End -->
+            </div>
         </div>
+
     </div>
 </div>
+
 <div class="container">
     <!-- Top navbar -->
     <div class="navbar">
