--- a/app/modules/manager/views/scripts/counseling-structure/edit-rules.ajax.phtml
+++ b/app/modules/manager/views/scripts/counseling-structure/edit-rules.ajax.phtml
@@ -5,19 +5,19 @@ $data = $this->data;
 <form id="edit-rules">
     <table class="table table-striped table-bordered">
         <colgroup>
-            <col width="90"/>
-            <col/>
-            <col/>
+            <col width="50"/>
+            <col width="300"/>
+            <col width="300"/>
             <col width="200"/>
             <col/>
         </colgroup>
         <thead>
         <tr>
-            <th>Код правила</th>
-            <th>С Уровня</th>
-            <th>На уровень</th>
-            <th>Время</th>
-            <th>Включить</th>
+            <th>#ID</th>
+            <th>Отправитель</th>
+            <th>Получатель</th>
+            <th>Время реакции</th>
+            <th>Включено</th>
         </tr>
         </thead>
         <tbody>
