--- a/app/modules/manager/views/scripts/counseling-structure/edit-rules.ajax.phtml
+++ b/app/modules/manager/views/scripts/counseling-structure/edit-rules.ajax.phtml
@@ -1,33 +1,38 @@
 <?php
 $data = $this->data;
+$line = $this->line;
 ?>
 <?php if(count($data) > 0):?>
 <form id="edit-rules">
     <table class="table table-striped table-bordered">
         <colgroup>
             <col width="50"/>
-            <col width="300"/>
-            <col width="300"/>
-            <col width="200"/>
+            <col width="80">
+            <col width="350"/>
+            <col width="350"/>
             <col/>
         </colgroup>
         <thead>
         <tr>
             <th>#ID</th>
+            <th>Включено</th>
             <th>Отправитель</th>
             <th>Получатель</th>
-            <th>Время реакции</th>
-            <th>Включено</th>
+            <th>Время реакции (сек.)</th>
         </tr>
         </thead>
+        <tfoot>
+        <tr>
+            <td colspan="5">
+                <input type="hidden" name="line" value="<?=$line?>"/>
+                <button type="button" value="Сохранить" data-action="save-rules">Сохранить</button>
+            </td>
+        </tr>
+        </tfoot>
         <tbody>
-
             <?php foreach($data as $rule): ?>
         <tr>
             <td><?=$rule->get('id'); ?></td>
-            <td><?=$rule->get('name_level_from'); ?></td>
-            <td><?=$rule->get('name_level_to'); ?></td>
-            <td><input name="rules[<?=$rule->get('id') ?>][duration]" type="text" value="<?=$rule->get('duration'); ?>"/></td>
             <td>
                 <?php if(true == $rule->get('is_enabled')): ?>
                 <input type="checkbox" name="rules[<?=$rule->get('id') ?>][is_enabled]" value="true" checked="true"/>
@@ -35,15 +40,12 @@ $data = $this->data;
                 <input type="checkbox" name="rules[<?=$rule->get('id') ?>][is_enabled]" value="false" />
                 <?php endif; ?>
             </td>
+            <td><?=$rule->get('name_level_from'); ?></td>
+            <td><?=$rule->get('name_level_to'); ?></td>
+            <td><input name="rules[<?=$rule->get('id') ?>][duration]" type="text" value="<?=$rule->get('duration'); ?>"/></td>
         </tr>
             <?php endforeach; ?>
-        <tr>
-            <td colspan="5">
-                <button type="button" value="Сохранить" id="submitRules" onclick="consultationLineRulesCommitChanges(this.form)">Сохранить</button>
-            </td>
-        </tr>
         </tbody>
     </table>
-    <input type="hidden" name="line" value="<?=$this->line->getId();?>"/>
 </form>
 <?php endif; ?>
