--- a/app/modules/manager/views/scripts/counseling-structure/line.phtml
+++ b/app/modules/manager/views/scripts/counseling-structure/line.phtml
@@ -1,41 +1,89 @@
 <?php
+/**
+ * Product: HELPME
+ * @author: GaltsinAK
+ */
+/**
+ * Шаблон для редактирования ЛК
+ */
+?>
+<?php
+$line = $this->line;
+?>
+<?php
 $jScript = <<<JS
 require(["dojo/behavior", "core/Sandbox", "core/sandbox/layout/Dialog"]);
 dojo.ready(function(){
     Sandbox = new core.Sandbox();
 
     dojo.behavior.add({
-        '#testme': {
+        '[data-action="edit-line"]': {
             onclick: function(){
-                Sandbox.Layout.contentLoader('manager/counseling-structure/edit-line', {id: 10}).addCallback(function(results){
+                Sandbox.Layout.contentLoader('manager/counseling-structure/edit-line', {line: $line}).addCallback(function(results){
                     dojo.byId('content').innerHTML = results;
                 });
             }
         },
-        '#testme2': {
+        '[data-action="get-levels"]': {
             onclick: function(){
-                Sandbox.Layout.contentLoader('manager/counseling-structure/get-levels', {id: 11}).addCallback(function(results){
-                    dojo.byId('content').innerHTML = results;
-                });
-            }
-        },
-        '#testme3': {
-            onclick: function(){
-                Sandbox.Layout.contentLoader('manager/counseling-structure/edit-rules', {id: 11}).addCallback(function(results){
+                Sandbox.Layout.contentLoader('manager/counseling-structure/get-levels', {line: $line}).addCallback(function(results){
                     dojo.byId('content').innerHTML = results;
                 });
             }
         }
     });
+
+    // Оператор new позволяет получить this ссылку на новый объект
+    var editRules = new function(){
+        var that = this;
+        // События
+        this.behavior = {
+            '[data-action="edit-rules"]': {
+                onclick: function(event){
+                    that.refresh({line: $line});
+                    dojo.behavior.apply();
+                }
+            },
+            '[data-action="save-rules"]': {
+                onclick: function(event){
+                    that.save(dojo.formToObject(event.target.form));
+                }
+            }
+        };
+        // Обновить информацию
+        this.refresh = function(args){
+            // args = {line}
+            Sandbox.Layout.contentLoader('manager/counseling-structure/edit-rules', args).addCallback(function(results){
+                Sandbox.Layout.placeContent(dojo.byId('content'), results);
+                dojo.behavior.apply();
+                console.log(Object.prototype.toString.call(that));
+            });
+        };
+        // Сохранить информацию о переадресации
+        this.save = function(data){
+            Sandbox.Layout.dataSender('manager/counseling-structure/edit-rules', data).addCallback(function(results){
+                if(results.status === 'ok') {
+                    var dialog = core.sandbox.layout.Dialog();
+                    dialog.show();
+                    setTimeout(function(){
+                        dialog.hideWithSuccess();
+                    }, 0)
+                }
+            });
+        }
+    };
+
+    dojo.behavior.add(editRules.behavior);
     dojo.behavior.apply();
+
 });
 JS;
 $this->headScript()->appendScript($jScript, $type = 'text/javascript');
 ?>
 <div style="margin: 15px 0">
-    <button type="button" id="testme">Общее</button>
-    <button type="button" id="testme2">Уровни</button>
-    <button type="button" id="testme3">Связи уровней</button>
-    <button type="button" id="testme4">Тарифы</button>
+    <button type="button" data-action="edit-line">Общее</button>
+    <button type="button" data-action="get-levels">Уровни</button>
+    <button type="button" data-action="edit-rules">Переадресация</button>
+    <button type="button" data-action="get-tariffs">Тарифы</button>
 </div>
-<div id="content">1</div>
+<div id="content"></div>
