--- a/app/layouts/core/default.phtml
+++ b/app/layouts/core/default.phtml
@@ -19,7 +19,8 @@
             parseOnLoad: true,
             isDebug: true,
             packages: [
-                {name: "core", location: '../../core'}
+                {name: "core", location: '../../core'},
+                {name: "app", location: '../../app'}
             ]
         };
         // Application configuration
