--- a/app/modules/manager/views/scripts/counseling-structure/get-levels.ajax.phtml
+++ b/app/modules/manager/views/scripts/counseling-structure/get-levels.ajax.phtml
@@ -32,7 +32,7 @@ if(true === $this->is_writable):
         <tr>
 
             <td colspan="2">
-                <button type="button">+ Добавить</button>
+                <button type="button" data-action="addLevel">+ Добавить</button>
             </td>
         </tr>
     </tfoot>
