--- a/app/modules/manager/views/scripts/counseling-structure/get-levels.ajax.phtml
+++ b/app/modules/manager/views/scripts/counseling-structure/get-levels.ajax.phtml
@@ -43,7 +43,7 @@ if(true === $this->is_writable):
         ?>
         <tr>
             <td><?=$entry->get('id')?></td>
-            <td><a href="#level/<?=$entry->get('id')?>" data-action="edit-level"><?=$entry->get('name')?></a></td>
+            <td><a href="#level/<?=$entry->get('id')?>" data-hash="#!/levelInfo/<?=$entry->get('id')?>"><?=$entry->get('name')?></a></td>
         </tr>
         <?php endforeach; ?>
         <?php else: ?>
